--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gradient Background with Fading Text</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="gradient-background">
+    <div class="text-container" id="textContainer"></div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
+
