--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DG | Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DG | Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="gradient-background">
-    <div class="text-container" id="textContainer"></div>
-  </div>
-  <div class="top-overlay"></div> <!-- White gradient overlay at the top -->
-  <script src="script.js"></script>
+    <div id="live-soon-container">
+        <div id="live-soon-gradient">
+            <div id="live-soon-text">Live Soon</div>
+        </div>
+    </div>
 </body>
 </html>
-
