--- a/index.html
+++ b/index.html
@@ -4,14 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DG | Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <div id="live-soon-container">
-        <div id="live-soon-gradient">
-            <div id="live-soon-text">Live Soon</div>
+    <div id="index-page">
+        <div id="intro">
+            <div id="animated-text"></div>
+            <iframe
+                src="https://giphy.com/embed/8pcUZOnLQ0ldECpVqe"
+                frameBorder="0"
+                allowFullScreen>
+            </iframe>
+        </div>
+        <div id="main-content">
+            <div id="logo">
+                <a href="index.html" id="logo-link">GOLOVCHITS.GITHUB.IO</a>
+            </div>
+            <div id="button-container">
+                <button class="main-button inactive" id="timeline-btn">Timeline</button>
+                <button class="main-button" id="projects-btn">Projects</button>
+                <button class="main-button inactive" id="jobs-btn">Jobs</button>
+                <button class="main-button inactive" id="about-btn">About Me</button>
+            </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
