image source fix

--- a/f1-in-schools.html
+++ b/f1-in-schools.html
@@ -73,7 +73,7 @@
         <!-- Image with 'View Project Website' overlay -->
         <div class="link-image-wrapper">
             <a href="https://golovchits.github.io/escapingsingularityf1/" target="_blank" class="image-link">
-                <img src="car.png" alt="Car Image" class="background-image">
+                <img src="Car.png" alt="Car Image" class="background-image">
                 <span class="link-overlay">View Project Website</span>
             </a>
         </div>
