--- a/roadmap-for-change.html
+++ b/roadmap-for-change.html
@@ -82,7 +82,7 @@
             <button class="dropdown-button">Visualisations</button>
             <div class="dropdown-content visualisations-content">
                 <div class="visualisation-container">
-                    <img src="figure1.gif" alt="Figure 1" class="visualisation-image">
+                    <img src="Figure1.gif" alt="Figure 1" class="visualisation-image">
                     <div class="iframe-container">
                         <iframe src="visualisation.html" class="visualisation-iframe"></iframe>
                         <button class="fullscreen-button">Full Screen</button>
