collab link fix and temp jobs page commit

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
         <div id="button-container">
             <button class="main-button inactive" id="timeline-btn">Timeline</button>
             <button class="main-button active" id="projects-btn">Projects</button>
-            <button class="main-button inactive" id="jobs-btn">Jobs</button>
+            <button class="main-button" id="jobs-btn">Jobs</button>
             <button class="main-button inactive" id="about-btn">About Me</button>
         </div>
 
