--- a/deliberative-opinion-generator.html
+++ b/deliberative-opinion-generator.html
@@ -84,7 +84,7 @@
     </div>
 
     <div class="collaborators-link-container">
-        <a href="https://www.linkedin.com/in/dmitry-golovchits/details/projects/urn:li:fsd_profileProject:(ACoAADnftW4B0vY4ZLe734YgBqW_pJSH7sVPxN0,1235365425)/creators/" 
+        <a href="https://www.linkedin.com/in/dmitry-golovchits/details/projects/" 
            target="_blank" 
            class="collaborators-link">View Collaborators</a>
     </div>    
