ipad and tv compatibility

--- a/roadmap-for-change.html
+++ b/roadmap-for-change.html
@@ -61,7 +61,7 @@
     <!-- Right Section -->
     <div class="dropdown-container">
         <div class="dropdown open">
-            <button class="dropdown-button">Overview</button>
+            <button class="dropdown-button">Overview (Best on mobile and fullscreen on laptop for now)</button>
             <div class="dropdown-content">
                 <p>In partnership with the Municipality of Amsterdam, our project investigated shared mobility hubs to provide actionable recommendations for scaling the current 18 mobility hubs to a goal of 2000. Our research focused on increasing the adoption and usage of mobility hubs by analyzing factors such as location, user perceptions, and system integration using Social Practice Theory and Systems Thinking. Field research, machine learning (random forest regression), and sentiment analysis highlighted key barriers, including low visibility and accessibility, and revealed that proximity to transit stations, population density, and income levels significantly predict mobility hub success.</p>
             </div>
