--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                                     <h4>Key Achievements</h4>
                                     <p>VIRA successfully created a centralized access point for previously fragmented payment term information, significantly reducing the time spent searching for payment term data. The system provides real-time payment term status monitoring across regions and vendors, vendor-specific payment term history, recent purchase order reviews with contextual information, integration with Supplier Account Manager reporting, and access to general procurement knowledge. By developing a classification framework that categorized payment terms as "healthy," "unhealthy," or "review," VIRA provided actionable intelligence for procurement professionals. The system was integrated into Microsoft Teams for workplace accessibility and designed with natural language queries matching procurement vocabulary, ensuring high user satisfaction and adoption.</p>
                                 </div>
-                                <div class="detail-section">
+                                <div class="detail-section" id="vira-demo">
                                     <h4>VIRA Demo</h4>
                                     <div class="project-visuals video-section">
                                         <video controls class="project-image">
